# school_substitution_plan_alert

./: .env.sample  .gitignore  Cargo.toml  config.toml  config.toml.sample  rustfmt.toml
sample_plans/: 116693  120394  1337  1337-decompressed  86111  86168  86261  86293  86376  90576  97840  98013
src/: classes_and_users.rs  commands.rs  config.rs  data.rs  discord.rs  discord_notifier.rs  error.rs  main.rs  substitution_pdf_getter.rs  substitution_schedule.rs  tabula_json_parser.rs  util.rs
tabula/: 1337.json  yes2.csv  yes3.csv  yes3.json
