[package]
name = "school_substitution_plan_alert"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lopdf = "0.26.0"
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["default", "derive"] }
chrono = "0.4.19"
reqwest = "0.11.4"
tokio = { version = "1.9.0", features = ["full"] }


[dependencies.uuid]
version = "0.8.2"
features = ["serde", "v4"]